--- a/JavaScript_and_the_browser_Projects/notes-app/index.html
+++ b/JavaScript_and_the_browser_Projects/notes-app/index.html
@@ -5,6 +5,9 @@
      </head>
      <body>
         <h1>Notes app</h1>
+        <input type="text" id="add-notes" />
+        <button id="add-notes-button">Add Note</button>
+
         <div id="main-container">
         
         </div>
